src/app/main-nav/main-nav.component.scss
.sidenav-container {
  height: 100%;
}

.sidenav {
  width: 200px;
}

.sidenav .mat-toolbar {
  background: inherit;
}

.mat-toolbar.mat-primary {
  position: sticky;
  top: 0;
  z-index: 1;
}

.fill-remaining-space {
  /* This fills the remaining space, by using flexbox.
     Every toolbar row uses a flexbox row layout. */
  flex: 1 1 auto;
}

.right-text-padding{
  padding: 0 14px;
}

a {
    text-decoration: none;
    color: black;
}

a:hover, a:active{
    color: white;
}

.logo {
  height: inherit;
}

footer{
    position:absolute;
    bottom:0;
    padding-left: 50px;
    width:100%;
    height:60px;   /* Height of the footer */
    background-color: gray;
    color: white;
}

